# Dia-tts-4-bit

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  benchmark.py  prepare_github.sh  preset_quantize.py  pyproject.toml  quantize_dia.py  requirements.txt  setup.sh  simple_quantize.py  test_original_model.py
.github/workflows/: test.yml
configs/: quantization_presets.json
examples/: generate_speech.py
